// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-typography should render headings 1`] = `
<modus-wc-typography hierarchy="h1">
  <!---->
  <h1 class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
    Test content
  </h1>
</modus-wc-typography>
`;

exports[`modus-wc-typography should render with custom props 1`] = `
<modus-wc-typography custom-class="test-class" hierarchy="p" size="sm" weight="bold">
  <!---->
  <p class="modus-wc-text-sm modus-wc-typography modus-wc-typography-weight-bold test-class">
    Test content
  </p>
</modus-wc-typography>
`;

exports[`modus-wc-typography should render with default props 1`] = `
<modus-wc-typography>
  <!---->
  <p class="modus-wc-text-md modus-wc-typography modus-wc-typography-weight-normal">
    Test content
  </p>
</modus-wc-typography>
`;
